--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@ async function run_it2() {
 	var xs_test_3d_arr = [30.299999237060547, 31, 31.299999237060547, 26.299999237060547, 24.899999618530273, 24.299999237060547, 24, 23.100000381469727, 22.600000381469727, 22.399999618530273, 22];
 	xs_test_3d_arr = tf.tensor(xs_test_3d_arr);
 	
-	xs_test_3d_arr = await recur_func(xs_test_3d_arr);
+	xs_test_3d_arr = await shift_tf_xsTest_array(xs_test_3d_arr);
 	console.log('xs_test_3d_arr: ', xs_test_3d_arr);
 
 }
@@ -66,28 +66,13 @@ async function create_correct_batchSize_for_xTest(xs_test_3d_arr, batch_size) {
 	return tf.tensor(xs_test_3d_arr);
 }
 	
-// -----------------------------------------------
-
-async function convert_tfarray_to_FlatnormalArray(xs_test_3d_arr) {
-
-	xs_test_3d_arr = xs_test_3d_arr.dataSync(); // Float32Array , [batch_size=1, timesteps=11, num_of_features=1]
-	console.log('xs_test_3d_arr: ', xs_test_3d_arr);
-
-	// Convert the TypedArray into a normal array
-	const normalArray = await Array.from(xs_test_3d_arr);
-	console.log('normalArray: ', normalArray);
-	
-	var xs_test_flat = normalArray.flat();   // [timesteps=11]
-	console.log('xs_test_flat: ', xs_test_flat);
-
-	return xs_test_flat;
-}
 
 
-async function recur_func(xs_test_3d_arr) {
+async function shift_tf_xsTest_array(xs_test_3d_arr) {
 	
 	var xs_test_flat = await convert_tfarray_to_FlatnormalArray(xs_test_3d_arr);
-
+	console.log('xs_test_flat: ', xs_test_flat);
+	
 	// ------------------------
 	
 	var repeated_last_value = await Array.from({length: 1}, (val, ind) => { return xs_test_flat.at(xs_test_flat.length-1); });
@@ -141,6 +126,23 @@ async function shape(arr) {
 	return shap;
 }
 
+// -----------------------------------------------
+
+async function convert_tfarray_to_FlatnormalArray(xs_test_3d_arr) {
+
+	xs_test_3d_arr = xs_test_3d_arr.dataSync(); // Float32Array , [batch_size=1, timesteps=11, num_of_features=1]
+	console.log('xs_test_3d_arr: ', xs_test_3d_arr);
+
+	// Convert the TypedArray into a normal array
+	const normalArray = await Array.from(xs_test_3d_arr);
+	console.log('normalArray: ', normalArray);
+	
+	var xs_test_flat = normalArray.flat();   // [timesteps=11]
+	console.log('xs_test_flat: ', xs_test_flat);
+
+	return xs_test_flat;
+}
+	
 // -----------------------------------------------
 
 </script>
