--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@ async function run_it() {
 
 async function run_it2() {
 	
-	var xs_test_3d_arr = [[30.299999237060547, 31, 31.299999237060547, 26.299999237060547, 24.899999618530273, 24.299999237060547, 24, 23.100000381469727, 22.600000381469727, 22.399999618530273, 22], [30.299999237060547, 31, 31.299999237060547, 26.299999237060547, 24.899999618530273, 24.299999237060547, 24, 23.100000381469727, 22.600000381469727, 22.399999618530273, 22]];
+	var xs_test_3d_arr = [[[30.299999237060547], [31], [31.299999237060547], [26.299999237060547], [24.899999618530273], [24.299999237060547], [24], [23.100000381469727], [22.600000381469727], [22.399999618530273], [22]], [[30.299999237060547], [31], [31.299999237060547], [26.299999237060547], [24.899999618530273], [24.299999237060547], [24], [23.100000381469727], [22.600000381469727], [22.399999618530273], [22]]];
 	xs_test_3d_arr = tf.tensor(xs_test_3d_arr);
 	
 	xs_test_3d_arr = await shift_tf_xsTest_array(xs_test_3d_arr);
@@ -43,8 +43,10 @@ async function run_it3() {
 	shap = await shape(xs_test_3d_arr);  
 	console.log('Shape xs_test_3d_arr: ', shap);
 	
-	var out = xs_test_3d_arr[0];
-	console.log('out: ', out);
+	var out = [xs_test_3d_arr[0]];
+
+	shap = await shape(out);  
+	console.log('Shape out: ', shap);
 }
 	
 
@@ -84,7 +86,7 @@ async function shift_tf_xsTest_array(xs_test_3d_arr) {
 	// Ensure that the first batch is only used
 	if (xs_test_3d_arr.length > 1) {
 		// only take the first batch
-		xs_test_3d_arr = xs_test_3d_arr[0];
+		xs_test_3d_arr = [xs_test_3d_arr[0]];
 	}
 	
 	var xs_test_flat = await convert_tfarray_to_FlatnormalArray(xs_test_3d_arr);
