--- a/index2.html
+++ b/index2.html
@@ -69,27 +69,40 @@ async function testing_flat() {
 	var out1 = out.flat();
 	console.log('out1: ', out1);
 
-	var out2 = await recur_flat(out);
+	var out2 = recur_flat(out);
 	console.log('out2: ', out2);
 }
 
 
-function async recur_flat(arr) {
-	 var flat_arr = arr.map(async(val, ind) => {
+// function async recur_flat(arr) {
+// 	 var flat_arr = arr.map(async(val, ind) => {
+// 		console.log('val: ', val);
+// 		console.log('Array.isArray(val): ', Array.isArray(val));
+// 		if (Array.isArray(val)) {
+// 			return await recur_flat(val)[0];
+// 		} else {
+// 			return val;
+// 		}
+// 	});	
+// 	console.log('flat_arr: ', flat_arr);
+// 	return flat_arr;
+// }
+// SyntaxError: missing ( before formal parameters
+
+function recur_flat(arr) {
+	 var flat_arr = arr.map((val, ind) => {
 		console.log('val: ', val);
 		console.log('Array.isArray(val): ', Array.isArray(val));
 		if (Array.isArray(val)) {
-			return await recur_flat(val)[0];
+			return recur_flat(val)[0];
 		} else {
 			return val;
 		}
 	});
-	
 	console.log('flat_arr: ', flat_arr);
 	return flat_arr;
 }
-
-
+	
 
 function async recur_flat2(arr) {
 
