--- a/index2.html
+++ b/index2.html
@@ -69,27 +69,12 @@ async function testing_flat() {
 	var out1 = out.flat();
 	console.log('out1: ', out1);
 
-	// var out2 = recur_flat(out);
-	// console.log('out2: ', out2);
+	var out2 = recur_flat(out);
+	console.log('out2: ', out2);
 
-	var out3 = await recur_flat2(out);
-	console.log('out3: ', out3);
 }
 
 
-function async recur_flat2(arr) {
-	 var flat_arr = await arr.map(async(val, ind) => {
-		 console.log('val: ', val);
-		 console.log('Array.isArray(val): ', Array.isArray(val));
-		 if (Array.isArray(val)) {
-			 return await recur_flat(val)[0];
-		 } else {
-			 return val;
-		 }
-	 });
-	console.log('flat_arr: ', flat_arr);
-	return flat_arr;
-}
 
 function recur_flat(arr) {
 	 var flat_arr = arr.map((val, ind) => {
