--- a/index2.html
+++ b/index2.html
@@ -76,7 +76,7 @@ async function testing_flat() {
 	
 	// ----------------------
 
-	var out3 = flat_arr(xs_test_3d_arr);
+	var out3 = await flat_arr(xs_test_3d_arr);
 	console.log('out3: ', out3);
 	
 	shap = await shape(out3);  
@@ -90,7 +90,7 @@ async function flat_arr(arr) {
 	var str = JSON.stringify(arr);
 	
 	//const regex = /\b\d+\.\d+\b/g;
-	const regex = /\d+\.\d+/g;
+	const regex = /\b\d+\.\d+\b|\b\d+\b/g;
 	var matches = str.match(regex);
 	console.log('matches: ', matches);
 
