--- a/index2.html
+++ b/index2.html
@@ -104,7 +104,15 @@ async function flat_arr(arr) {
 }
 	
 	
+function recur_flat1(àrr) {
 
+	var out = arr.flat();
+
+	shap = await shape(out1);  
+	console.log('Shape out1: ', shap);
+	
+	if (Array.isArray(out)) {
+}
 
 function recur_flat(arr) {
 
