--- a/index3.html
+++ b/index3.html
@@ -112,7 +112,7 @@ function recur_flat(arr) {
   
 // -----------------------------------------------
 
-function recur_flat1(àrr) {
+function recur_flat1(arr) {
 
 	var out = [];
 	for (var i=0; i<arr.length; i++) {
