--- a/index3.html
+++ b/index3.html
@@ -3,17 +3,51 @@
 <head></head>
 <body>
 
+<button id="toggle-button">Toggle Mode</button>
+	
 <button id="run_it" onclick="run_it()">run_it</button>
 <button id="run_it2" onclick="run_it2()">run_it2</button>
 <button id="run_it3" onclick="run_it3()">run_it3</button>
 <button id="testing_flat" onclick="testing_flat()">testing_flat</button>
+
 	
+<!-- ---------------------------------------- -->
+<!-- CSS -->
+<style>
+:root {--background-color-light: #ffffff;
+      --title-color-light: #333333;
+      --text-color-light: #333333;
+      }
+	
+body {
+  background: var(--background-color-light);
+  color: var(--text-color-light);
+}
+	
+h1 { color: var(--title-color-light); }
+
+</style>
+	
+<!-- --------------------------------------------------- -->
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
 
 
 <script>
+const toggleMode = () => {
+  const body = document.body;
+  body.classList.toggle('dark-mode');
+  
+  if (body.classList.contains('dark-mode')) {
+    body.style.setProperty('--background', var(--background-color-dark));
+    body.style.setProperty('--text-color', var(--text-color-dark));
+  } else {
+    body.style.setProperty('--background', var(--background-color-light));
+    body.style.setProperty('--text-color', var(--text-color-light));
+  }
+}
 
+document.getElementById('toggle-button').addEventListener('click', toggleMode);
 
 async function run_it() {
 	
