--- a/index3.html
+++ b/index3.html
@@ -20,7 +20,7 @@
       }
 	
 body {
-  background: var(--background-color-light);
+  background-color: var(--background-color-light);
   color: var(--text-color-light);
 }
 	
@@ -39,10 +39,10 @@ const toggleMode = () => {
   body.classList.toggle('dark-mode');
   
   if (body.classList.contains('dark-mode')) {
-    body.style.setProperty('--background', var(--background-color-dark));
+    body.style.setProperty('--background-color', var(--background-color-dark));
     body.style.setProperty('--text-color', var(--text-color-dark));
   } else {
-    body.style.setProperty('--background', var(--background-color-light));
+    body.style.setProperty('--background-color', var(--background-color-light));
     body.style.setProperty('--text-color', var(--text-color-light));
   }
 }
