--- a/index3.html
+++ b/index3.html
@@ -2,31 +2,11 @@
 <html>
 <head></head>
 <body>
-
-<button id="toggle-button">Toggle Mode</button>
 	
 <button id="run_it" onclick="run_it()">run_it</button>
 <button id="run_it2" onclick="run_it2()">run_it2</button>
 <button id="run_it3" onclick="run_it3()">run_it3</button>
-<button id="testing_flat" onclick="testing_flat()">testing_flat</button>
 
-	
-<!-- ---------------------------------------- -->
-<!-- CSS -->
-<style>
-:root {--background-color-light: #ffffff;
-      --title-color-light: #333333;
-      --text-color-light: #333333;
-      }
-	
-body {
-  background-color: var(--background-color-light);
-  color: var(--text-color-light);
-}
-	
-h1 { color: var(--title-color-light); }
-
-</style>
 	
 <!-- --------------------------------------------------- -->
 
@@ -75,7 +55,7 @@ async function run_it3() {
 
 
 
-async function testing_flat() {
+async function () {
 	
 	var xs_test_3d_arr = [[[30.299999237060547], [31], [31.299999237060547], [26.299999237060547], [24.899999618530273], [24.299999237060547], [24], [23.100000381469727], [22.600000381469727], [22.399999618530273], [22]], [[30.299999237060547], [31], [31.299999237060547], [26.299999237060547], [24.899999618530273], [24.299999237060547], [24], [23.100000381469727], [22.600000381469727], [22.399999618530273], [22]]];
 
