--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head></head>
 <body>
 
-<button id="toggle-button">Toggle Mode</button>
+<!-- <button id="toggle-button">Toggle Mode</button> -->
   
 <label class="switch"><input type="checkbox" id="toggle_type0">Dark<span class="slider">Light</span></label>
 
-<input type="checkbox" id="toggle_type1" class="checkbox" />
-<label for="switch" class="toggle"><p>Dark &nbsp;&nbsp; Light</p></label>
+<!-- <input type="checkbox" id="toggle_type1" class="checkbox" /><label for="switch" class="toggle"><p>Dark &nbsp;&nbsp; Light</p></label> -->
 
 
 <!-- ---------------------------------------- -->
@@ -85,12 +84,12 @@ input:checked + .slider:before {
 function processEvent_checkboxOption(event) {
 	if (this.getAttribute("checked") == false) {
     // Light
-		document.body.style.background-color = "background-color-light"; // OR "#ffffff"
+		document.body.style.backgroundColor = "background-color-light"; // OR "#ffffff"
 		document.body.style.color = "text-color-light"; // OR "#333333"
 		document.getElementsByTagName("h1").style.color = "title-color-light"; // OR "#333333"
 	} else  {
     // Dark
-		document.body.style.background-color = "#333333";
+		document.body.style.backgroundColor = "#333333";
 		document.body.style.color = "#ffffff";
 		document.getElementsByTagName("h1").style.color = "#ffffff";
 	}
