--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ function processEvent_checkboxOption(event) {
 	}
 }
 
-document.getElementById("toggle_type0")("click", processEvent_checkboxOption, false);
+document.getElementById("toggle_type0").addEventListener("click", processEvent_checkboxOption, false);
 
 // ----------------------------------------------------
 
