--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head></head>
 <body>
   
-<label class="switch"><input type="checkbox" id="toggle_type0">🌕<span class="slider">☀️</span></label>
+<label class="switch"><input type="checkbox" id="toggle_type0"><span class="slider">☀️&nbsp🌕</span></label>
 
 
 <!-- ---------------------------------------- -->
