--- a/index.html
+++ b/index.html
@@ -2,24 +2,15 @@
 <html>
 <head></head>
 <body>
-  
+
+<h1>Drag and Drop data to a bucket</h1>
+<p>Text</p>
 <label class="switch"><input type="checkbox" id="toggle_type0"><span class="slider">☀️&nbsp🌕</span></label>
 
 
 <!-- ---------------------------------------- -->
 <!-- CSS -->
 <style>
-:root {--background-color-light: #ffffff;
-      --title-color-light: #333333;
-      --text-color-light: #333333;
-}
-	
-body {
-  background-color: var(--background-color-light);
-  color: var(--text-color-light);
-}
-	
-h1 { color: var(--title-color-light); }
 
 .switch {
   position: relative;
