--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ function processEvent_checkboxOption(event) {
 		document.querySelector("h1").style.color = "#333333"; // "title-color-light";
 
 		// Reset checked state to false
-		event.click.target.checked = false;
+		document.getElementById("toggle_type0").click.target.checked = false;
 	} else  {
 		// Dark
 		document.body.style.backgroundColor = "#333333";
