--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <h1>Drag and Drop data to a bucket</h1>
 <p>Text</p>
-<label class="switch"><input type="checkbox" id="toggle_type0"><span class="slider"></span></label>
+<label class="switch"><input type="checkbox" id="toggle_type0" checked><span class="slider"></span></label>
 
 
 <!-- ---------------------------------------- -->
@@ -82,7 +82,7 @@ function processEvent_checkboxOption(event) {
 		document.querySelector("h1").style.color = "#333333"; // "title-color-light";
 
 		// Reset checked state to false
-		document.getElementById("toggle_type0").click.target.checked = false;
+		document.getElementById("toggle_type0").checked = false;
 	} else  {
 		// Dark
 		document.body.style.backgroundColor = "#333333";
